Fix Profile Pic Overlap

--- a/src/app/email/email.component.scss
+++ b/src/app/email/email.component.scss
@@ -1,39 +1,4 @@
-.horizontal {
-    display: flex;
-  }
-  .width100 {
-    width: 100%;
-  }
-  .huge {
-    font-size: 5rem;
-  }
-  .giant {
-    font-size: 3rem;
-  }
-  .chonky {
-    font-size: 2rem;
-  }
-  .large {
-    font-size: 1.5rem;
-  }
-  .medium {
-    font-size: 1rem;
-  }
-  .small {
-    font-size: large;
-  }
-  .extrasmall {
-    font-size: medium;
-  }
-  .bolder {
-    font-weight: 900;
-  }
-  .lightweight {
-    font-weight: 100;
-  }
-  .bold {
-    font-weight: bold;
-  }
+
   .nopadding {
     padding: 0;
     padding-left: 0;
