--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -49,7 +49,6 @@
   width: auto;
   margin-left: auto;
   margin-right: 2rem;
-  margin-bottom: -3rem;
 }
 .nopadding {
   padding: 0;
